# Cloudsentinel

./: .env.example  .gitignore  LINKEDIN_POST.md  README.md  pyproject.toml  requirements.txt
cloudsentinel/: __init__.py  cli.py  config.py  models.py
cloudsentinel/analyzers/: __init__.py  ml.py  rules.py
cloudsentinel/collectors/: __init__.py  base.py  cloudfront.py  dynamodb.py  ebs.py  ec2.py  elastic_ip.py  elb.py  iam.py  lambda_.py  nat_gateway.py  rds.py  s3.py
