[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudsentinel"
version = "1.0.0"
description = "AI-powered AWS cost optimization and resource monitoring tool"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "CloudSentinel Contributors" }]
keywords = ["aws", "cost-optimization", "cloud", "bedrock", "ai", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "python-dateutil>=2.8.2",
    "tabulate>=0.9.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-mock>=3.12", "ruff>=0.3.0", "mypy>=1.8.0"]

[project.scripts]
cloudsentinel = "cloudsentinel.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/cloudsentinel"
Issues = "https://github.com/your-org/cloudsentinel/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
